# finsave

./: fix_components.py  fix_copy.py  fix_navbar.py  fix_use_client.py
SummerHacks/: .gitignore  00-build-plan-optimized.md  design.md  frontend_integration_guide.md  graphify-learn.md  prd.md  report.md  skills-lock.json  summary-01-authentication.md  summary-phase-2.md
SummerHacks/.agents/: expenseautopsy_local_voice_ai_layer_md_v_1.md
SummerHacks/backend/: .env.example  .gitignore  main.py  prompts.py  pyproject.toml  requirements.txt  setu_auth.py  state.py  test_pipeline.py  web3_helper.py
SummerHacks/backend/graph/: expense_graph.py
SummerHacks/backend/graph/nodes/: advanced_insights_node.py  categorization_node.py  coaching_node.py  habit_analyst_node.py  intake_node.py  mirror_prediction_node.py  parsing_node.py  projection_node.py  savings_score_node.py  spending_node.py  structural_coach_node.py  trend_forecaster_node.py  trigger_psych_node.py  vision_node.py
SummerHacks/backend/routes/: challenge.py  expense_analysis.py  leaderboard.py  setu_aa.py  verification.py
SummerHacks/backend/schemas/: expense_analysis.py  graph_state.py  user.py
SummerHacks/backend/services/: advanced_insights_service.py  categorization_agent.py  merchant_mapper.py  pii_masking.py  rebit_parser.py  savings_score.py  vision_service.py
SummerHacks/backend/utils/: category_constants.py  db.py  ocr.py
SummerHacks/context/: ai-workflow-rules.md  architecture.md  code-standards.md  progress-tracker.md  project-overview.md  ui-context.md
SummerHacks/graphify-out/: graph.html  (+5 more)
(+80 files in other folders)
